Use Stream.toList(); other minor fixes
GitOrigin-RevId: 80cd98f05d25a63413085a2c6ee2bd650d7f5716