@@ -175,7 +175,7 @@ public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLoc
         return null;
       })
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
 
     PsiResolveHelper resolveHelper = PsiResolveHelper.getInstance(project);
     return directInheritorStats
@@ -184,7 +184,7 @@ public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLoc
       .flatMap(c -> StreamEx.of(getClassesIfInterface(c, finalHierarchyCardinality, searchScope, place, project, compilerRefService)).prepend(c))
       .sorted()
       .limit(MAX_RESULT)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static List<ClassAndInheritorCount> getClassesIfInterface(@NotNull ClassAndInheritorCount classAndInheritorCount,
