@@ -51,7 +51,7 @@ public abstract class FragmentedSettingsEditor<Settings extends FragmentedSettin
   public void resetEditorFrom(@NotNull Settings settings) {
     super.resetEditorFrom(settings);
     List<FragmentedSettings.Option> options = settings.getSelectedOptions();
-    for (SettingsEditorFragment<Settings, ?> fragment : getAllFragments().collect(Collectors.toList())) {
+    for (SettingsEditorFragment<Settings, ?> fragment : getAllFragments().toList()) {
       FragmentedSettings.Option option = ContainerUtil.find(options, o -> fragment.getId().equals(o.getName()));
       fragment.setSelected(option == null ? fragment.isInitiallyVisible(settings) : option.getVisible());
     }
@@ -60,7 +60,7 @@ public abstract class FragmentedSettingsEditor<Settings extends FragmentedSettin
   @Override
   public void applyEditorTo(@NotNull Settings settings) throws ConfigurationException {
     super.applyEditorTo(settings);
-    final var fragments = getAllFragments().collect(Collectors.toList());
+    final var fragments = getAllFragments().toList();
 
     fragments.forEach(f -> f.validate(settings));
     List<FragmentedSettings.Option> options = fragments.stream().filter(fragment -> (isDefaultSettings() || fragment.isCanBeHidden()) &&
